--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -41,11 +41,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/patrick_hand_sc"
+        android:fontFamily="@font/satisfy"
         android:text="@string/slogan_splash"
         android:textColor="@color/primary_dark"
         android:textStyle="bold"
-        android:textSize="25sp"
+        android:textSize="21sp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
