upload fonts slogan

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/concert_one</item><!-- FUENTE TITULOS-->
-        <item>@font/roboto</item><!-- FUENTE TEXTO-->
+        <item>@font/roboto</item>
+        <item>@font/satisfy</item><!-- FUENTE TEXTO-->
     </array>
 </resources>
