--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -59,7 +59,7 @@
             android:layout_height="20sp"
             android:layout_marginTop="32dp"
             android:background="@drawable/ic_calendar"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="0dp"
             app:layout_constraintTop_toBottomOf="@id/description"
             app:layout_constraintEnd_toStartOf="@id/fecha"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -69,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             android:text="Fecha del evento"
             android:gravity="start"
             android:textSize="15sp"
@@ -84,7 +84,6 @@
             android:layout_height="20dp"
             android:layout_marginTop="13dp"
             android:background="@drawable/ic_clock"
-            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toBottomOf="@id/tvfecha"
             app:layout_constraintEnd_toStartOf="@id/horario"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -94,7 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             android:text="Horario del evento"
             android:gravity="start"
             android:textSize="15sp"
@@ -109,7 +108,6 @@
             android:layout_height="20dp"
             android:layout_marginTop="14dp"
             android:background="@drawable/ic_chincheta"
-            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toBottomOf="@id/tvhorario"
             app:layout_constraintEnd_toStartOf="@id/lugar"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -120,7 +118,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             android:gravity="start"
             android:text="Lugar del evento"
             android:textSize="15sp"
@@ -186,7 +184,7 @@
                 />
         </FrameLayout>
 
-        <Button
+        <!--<Button
             android:id="@+id/unirse"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
@@ -194,7 +192,18 @@
             style="@style/Button.Unirse"
             android:text="SUSCRIBE"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
-            app:layout_constraintTop_toBottomOf="@id/lugar" />
+            app:layout_constraintTop_toBottomOf="@id/lugar" />-->
+
+        <Button
+            android:id="@+id/unirse"
+            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:backgroundTint="@color/secondary"
+            android:text="SUSCRIBE"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="@id/rightguide"
+            app:layout_constraintTop_toBottomOf="@id/lugar"/>
+
 
         <ImageButton
             android:id="@+id/info"
