--- a/app/src/main/res/layout/activity_profileview.xml
+++ b/app/src/main/res/layout/activity_profileview.xml
@@ -10,29 +10,53 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/backButton"
-            android:layout_width="50dp"
+        <RelativeLayout
+            android:id="@+id/buttonLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:padding="8dp"
-            style="@style/ButtonBack"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@color/secondary_light"
+            tools:ignore="MissingConstraints">
+
+            <Button
+                android:id="@+id/backButton"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:padding="8dp"
+                style="@style/ButtonBack"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:id="@+id/meetmaperTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="40dp"
+                android:maxLength="15"
+                android:fontFamily="@font/concert_one"
+                android:layout_marginTop="2dp"
+
+                android:layout_marginRight="60dp"
+                android:textColor="@color/dark_gray"
+                android:textAlignment="center"
+                android:layout_toEndOf="@id/backButton"
+                android:layout_alignTop="@id/backButton"
+                />
+
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/ivuser"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="100dp"
             android:scaleType="centerCrop"
             android:background="@drawable/round_image"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="@id/leftguide"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/buttonLayout" />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -60,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
-                android:hint="@string/name"
+                android:hint=""
                 android:inputType="text"
                 android:textSize="20dp"
                 android:theme="@style/lineET" />
@@ -90,7 +114,7 @@
                 android:id="@+id/surnombre"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/surname"
+                android:hint=""
                 android:theme="@style/lineET"
                 android:textSize="20dp"
                 android:inputType="text" />
@@ -120,7 +144,7 @@
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/telefono"
+                android:hint=""
                 android:theme="@style/lineET"
                 android:textSize="20dp"
                 android:inputType="number" />
@@ -150,7 +174,7 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/email"
+                android:hint=""
                 android:focusable="false"
                 android:clickable="false"
                 android:textSize="20dp"
@@ -186,9 +210,9 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:textSize="20dp"
-                android:hint="@string/description"
+                android:hint=""
                 android:theme="@style/lineET"
-                android:text="@string/textLarge" />
+                android:text="" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.constraintlayout.widget.Guideline
