--- a/app/src/main/res/layout/activity_profileview.xml
+++ b/app/src/main/res/layout/activity_profileview.xml
@@ -14,13 +14,13 @@
             android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/secondary_light"
+            android:background="@color/light_gray"
             tools:ignore="MissingConstraints">
 
             <Button
                 android:id="@+id/backButton"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_margin="16dp"
                 android:padding="8dp"
                 style="@style/ButtonBack"
@@ -35,7 +35,7 @@
                 android:textSize="40dp"
                 android:maxLength="15"
                 android:fontFamily="@font/concert_one"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="0dp"
 
                 android:layout_marginRight="60dp"
                 android:textColor="@color/dark_gray"
