--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -12,6 +12,7 @@ tools:context=".fragments.FavouritesFragment">
         android:layout_width="280dp"
         android:layout_height="280dp"
         android:src="@drawable/nochat"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -21,6 +22,7 @@ tools:context=".fragments.FavouritesFragment">
         android:layout_height="wrap_content"
         android:text="@string/nochats"
         android:textStyle="bold"
+        android:visibility="invisible"
         android:fontFamily="@font/concert_one"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/emptyRecyclerViewImageView"
