--- a/app/src/main/res/layout/favlist_item.xml
+++ b/app/src/main/res/layout/favlist_item.xml
@@ -38,6 +38,15 @@
             android:textSize="20dp"
             android:ellipsize="end"/>
 
+        <ImageButton
+            android:id="@+id/removeFavBtn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:padding="0dp"
+            android:background="@drawable/love2"
+            />
+
 
         <TextView
             android:id="@+id/fli_desc"
