--- a/app/src/main/res/layout/activity_suscribers.xml
+++ b/app/src/main/res/layout/activity_suscribers.xml
@@ -9,32 +9,33 @@
         <RelativeLayout
             android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:background="@color/secondary_light">
 
                 <Button
                     android:id="@+id/backButton"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="16dp"
-                    android:padding="8dp"
                     style="@style/ButtonBack"
+                    android:layout_width="28dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true" />
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:padding="8dp" />
 
                 <TextView
                     android:id="@+id/meetmapersTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="MeetMappers"
-                    android:textSize="40dp"
-                    android:layout_marginBottom="26dp"
+                    android:textSize="20dp"
                     android:fontFamily="@font/concert_one"
-                    android:layout_marginTop="2dp"
-
+                    android:layout_marginTop="-2dp"
                     android:layout_marginRight="60dp"
+                    android:layout_marginLeft="0dp"
                     android:textColor="@color/dark_gray"
-                    android:textAlignment="center"
                     android:layout_toEndOf="@id/backButton"
                     android:layout_alignTop="@id/backButton"
                      />
