--- a/app/src/main/res/layout/activity_suscribers.xml
+++ b/app/src/main/res/layout/activity_suscribers.xml
@@ -1,52 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container_suscribers"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
+
+        <data>
+
+        </data>
 
         <RelativeLayout
-            android:id="@+id/buttonLayout"
+            android:id="@+id/container_suscribers"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@color/secondary_light">
+            android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/backButton"
-                    style="@style/ButtonBack"
-                    android:layout_width="28dp"
-                    android:layout_height="60dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:padding="8dp" />
-
-                <TextView
-                    android:id="@+id/meetmapersTV"
+                <com.google.android.material.appbar.AppBarLayout
+                    android:id="@+id/appbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/meetmappers"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/concert_one"
-                    android:layout_marginTop="-2dp"
-                    android:layout_marginRight="60dp"
-                    android:layout_marginLeft="0dp"
-                    android:textColor="@color/dark_gray"
-                    android:layout_toEndOf="@id/backButton"
-                    android:layout_alignTop="@id/backButton"
-                     />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                        <com.google.android.material.appbar.MaterialToolbar
+                            android:id="@+id/toolbar"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            app:title="@string/meetmappers"
+                            app:layout_scrollFlags="scroll|enterAlways"
+                            app:titleTextColor="@color/dark_gray"
+                            android:background="@color/secondary_light"
+                            />
+
+                </com.google.android.material.appbar.AppBarLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/appbar"
+                    tools:listitem="@layout/list_item_suscriber" />
 
         </RelativeLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/buttonLayout"
-            tools:listitem="@layout/list_item_suscriber" />
-
-</RelativeLayout>
+</layout>
