--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,8 +79,13 @@
     <style name="ToolbarTitleStyle" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="ToolbarTitleStyleMeetMappers" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/concert_one</item>
+        <item name="android:textColor">@color/dark_gray</item>
+    </style>
     <style name="ButtonBack" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/secondary</item>
+        <item name="android:textColor">@color/dark_gray</item>
         <item name="android:background">@drawable/baseline_arrow_back_24</item>
         <item name="android:padding">8dp</item>
     </style>
