Reorganize the structure of kt files

--- a/Meetmap/app/src/main/res/layout/activity_initial.xml
+++ b/Meetmap/app/src/main/res/layout/activity_initial.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Initial"
+    tools:context=".activities.Initial"
     android:background="@drawable/fondo_meet_map"
     >
 
