--- a/Meetmap/app/src/main/res/layout/content_scrolling_login.xml
+++ b/Meetmap/app/src/main/res/layout/content_scrolling_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".LoginScroll"
+    tools:context=".activities.LoginScroll"
     tools:showIn="@layout/activity_login_scroll">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
