--- a/Meetmap/app/src/main/res/layout/activity_reset_password.xml
+++ b/Meetmap/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_meet_map"
-    tools:context=".ResetPassword">
+    tools:context=".activities.ResetPassword">
 
     <TextView
         android:id="@+id/tvlogin"
