--- a/Meetmap/app/src/main/res/layout/activity_splash.xml
+++ b/Meetmap/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".Splash"
+    tools:context=".activities.Splash"
     android:background="@color/primary">
     <ImageView
         android:id="@+id/leftHand"
